# Pseudo3DRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  debug.sh  main.cpp  release.sh  reset_save_files.sh  run.sh  settings.txt
include/: Game.hpp  Render.hpp  Settings.hpp  UI.hpp
maps/: LegacyMapArrays.cpp  map0.txt  map1.txt  map2.txt
resources/maps/: map1.txt  map2.txt  map3.txt
src/: Game.cpp  Render.cpp  Render.h  Settings.cpp  UI.cpp  main.cpp  raygui.cpp
src/include/: Game.hpp  Render.hpp  Settings.hpp  UI.hpp
